added buttons to capture minus and add func. Count changes when buttons are pressed

--- a/word.html
+++ b/word.html
@@ -6,10 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Basic HTML CSS HW Counter</title>
+
 </head>
 
 <body>
-
+    <div>
+        <button id="minus" onclick="minusOne()">-</button>
+        <p id='counter'>Count: </p>
+        <button id="add" onclick="addOne()">+</button>
+    </div>
+    <script src="main.js"></script>
 </body>
 
 </html>
