--- a/word.html
+++ b/word.html
@@ -10,12 +10,15 @@
 </head>
 
 <body>
-    <div>
-        <button id="minus" onclick="minusOne()">-</button>
-        <p id='counter'>Count: </p>
-        <button id="add" onclick="addOne()">+</button>
+    <div style="border: 1px solid black; background-color: pink; width: 500px; display: flex; justify-content: center; align-items: center;">
+
+        <button id="minus" onclick="minusOne()" style="font-size: 50px; width: 10%; margin: 20px;">-</button>
+
+        <p id='counter' style="font-size: 50px">Count: 0</p>
+
+        <button id="add" onclick="addOne()" style="font-size: 50px;width: 10%; margin: 20px">+</button>
     </div>
-    <script src="main.js"></script>
+    <script src=" main.js "></script>
 </body>
 
 </html>
